# complex-epidemic-simulator

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  noxfile.py  pyproject.toml
src/complex_epidemic_simulator/: __init__.py  console.py  package_config.yml
src/complex_epidemic_simulator/config/: __init__.py  core.py  log.py
tests/: __init__.py
